--- a/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
+++ b/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
@@ -1,12 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClInclude Include="environment.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="ViewFaceBridge.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
-  </ItemGroup>
-</Project>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
