--- a/src/Runtimes/ViewFaceCore.runtime.win.vc/ViewFaceCore.runtime.win.vc.nuspec
+++ b/src/Runtimes/ViewFaceCore.runtime.win.vc/ViewFaceCore.runtime.win.vc.nuspec
@@ -2,10 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.runtime.win.vc</id>
-		<version>6.0.4</version>
+		<version>0.0.0</version>
 		<authors>View, SeetaFace</authors>
 		<owners>ViewFaceCore</owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
+		<license type="file">SeetaFace_LICENSE</license>
+		<readme>LICENSE</readme>
 		<icon>View-Logo.png</icon>
 		<description>VC++ Native libraries for Windows (x64/x86)</description>
 	</metadata>
@@ -27,6 +29,8 @@
 		<file src="vcruntime\x86\vcruntime140d.dll" target="build\viewfacecore\win\x86\vcruntime140d.dll"/>
 
 		<file src="ViewFaceCore.runtime.win.vc.targets" target="build\ViewFaceCore.runtime.win.vc.targets" />
-		<file src="..\..\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\assets\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
+		<file src="..\..\..\LICENSE" target="LICENSE" />
 	</files>
 </package>
