--- a/src/Runtimes/ViewFaceCore.runtime.ubuntu.20.04.x64/ViewFaceCore.runtime.ubuntu.20.04.x64.nuspec
+++ b/src/Runtimes/ViewFaceCore.runtime.ubuntu.20.04.x64/ViewFaceCore.runtime.ubuntu.20.04.x64.nuspec
@@ -2,10 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.runtime.ubuntu.20.04.x64</id>
-		<version>6.0.2</version>
+		<version>0.0.0</version>
 		<authors>View, SeetaFace</authors>
 		<owners>ViewFaceCore</owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
+		<license type="file">SeetaFace_LICENSE</license>
+		<readme>LICENSE</readme>
 		<icon>View-Logo.png</icon>
 		<description>ViewFaceCore Native libraries for Linux-x64 (Ubuntu 20.04)</description>
 	</metadata>
@@ -30,6 +32,8 @@
 		<file src="..\..\SeetaFace\index\build\lib64\libSeetaQualityAssessor300.so" target="build\viewfacecore\linux\x64\libSeetaQualityAssessor300.so" />
 
 		<file src="ViewFaceCore.runtime.ubuntu.20.04.x64.targets" target="build\ViewFaceCore.runtime.ubuntu.20.04.x64.targets" />
-		<file src="..\..\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\assets\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
+		<file src="..\..\..\LICENSE" target="LICENSE" />
 	</files>
 </package>
