--- a/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj
+++ b/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj
@@ -18,14 +18,6 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\Shared\bridge.h" />
-    <ClInclude Include="..\..\Shared\seetaEx\QualityOfClarityEx.h" />
-    <ClInclude Include="..\..\Shared\seetaEx\QualityOfNoMask.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\Shared\bridge.cpp" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -71,7 +63,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
-  <ImportGroup Label="Shared" />
+  <ImportGroup Label="Shared">
+    <Import Project="..\..\Shared\Shared.vcxitems" Label="Shared" />
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
