fix: 编译错误修改

--- a/src/Bridges/Linux/ViewFaceBridge/ViewFaceBridge.vcxproj
+++ b/src/Bridges/Linux/ViewFaceBridge/ViewFaceBridge.vcxproj
@@ -68,7 +68,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>WSL_1_0</PlatformToolset>
+    <PlatformToolset>Remote_GCC_1_0</PlatformToolset>
     <RemoteProjectRelDir>Bridges</RemoteProjectRelDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
